--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,6 +5,11 @@
 
   <body>
 
+     <!-- MathJax -->
+    <script type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
+    
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
