--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,9 +2,9 @@
 <html>
   <head>
 
-    <script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?...">
-</script>
+    <script type="text/javascript" id="MathJax-script" async
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.0.0/es5/latest?tex-mml-chtml.js">
+    </script>
     
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
