--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,7 +2,9 @@
 <html>
   <head>
 
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
     
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
